# zuzunza-haedoekgi

./: .gitignore  README.md  go.mod  main.go
.github/workflows/: release.yml
cmd/: decrypt.go  download.go  quota.go  root.go  search.go
gui/: index.html  package-lock.json  package.json  vite.config.ts
gui/src/: main.ts  styles.css
gui/src-tauri/: Cargo.toml  tauri.conf.json
gui/src-tauri/capabilities/: default.json
gui/src-tauri/src/: api.rs  lib.rs  main.rs
internal/client/: client.go
internal/config/: config.go
internal/progress/: progress.go
